# crypto-fifo-taxes

./: .coveragerc  .env.template  .gitignore  Makefile  README.md  binance_eth2_staking.json.template  coinbase_fills.json.template  db.sqlite  import.json.template  nicehash_report.csv.template  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
crypto_fifo_taxes/: apps.py  enums.py  exceptions.py  signals.py  urls.py
crypto_fifo_taxes/admin/: __init__.py
crypto_fifo_taxes/management/commands/: cost_basis.py  fetch_market_prices.py  gains.py  import_all.py  import_binance_eth2_json.py  import_coinbase_json.py  import_json.py  import_nicehash.py  init_project.py  snapshot.py  sync_binance.py
crypto_fifo_taxes/migrations/: 0001_initial.py  0002_make_icon_nullable.py  0002_rename_detail_fields.py  0003_add_timestamp_to_wallet_transfer.py  0003_increase_decimal_precision.py  0004_add_id_field.py  0004_remove_fee_cost_from_tradeextra.py  0005_fix_enumfield_type.py  0006_add_tx_order_ids.py  0007_transaction_ordering.py  0008_combine_order_tx_id_fields.py  0009_snapshot.py  0010_add_deposits_field.py  0011_ordering.py  0012_txdetail_currency_related_name.py  0013_increase_currency_name_max_length.py  0014_disallow_null_in_charfields.py  0015_add_num_missing_days.py  0016_remove_unique_together.py  0017_make_tx_timestamp_unique.py  0018_remove_user_connections.py  0019_remove_fiat_connections.py
crypto_fifo_taxes/models/: __init__.py  currency.py  snapshot.py  trade.py  transaction.py  transfer.py  wallet.py
crypto_fifo_taxes/templates/: base.html  graph.html  index.html  management.html  transactions.html
crypto_fifo_taxes/templates/crypto_fifo_taxes/: transaction_by_currency_list.html  transaction_list.html
crypto_fifo_taxes/templatetags/: custom_tags.py
crypto_fifo_taxes/utils/: binance_api.py  coingecko.py  common.py  currency.py  date_utils.py  db.py  ethplorer.py  models.py  pdf.py  transaction_creator.py  wallet.py  wrappers.py
crypto_fifo_taxes/utils/binance/: binance_api.py  binance_client.py  binance_importer.py  binance_wallet.py  types.py
crypto_fifo_taxes/utils/helpers/: snapshot_helper.py
crypto_fifo_taxes/utils/importer/: binance.py
crypto_fifo_taxes/views/: graph.py  management.py  management_commands.py  transactions.py
crypto_fifo_taxes_tests/: conftest.py  settings.py  test_app.py  test_binance_history_iterator.py  test_factories.py  test_fetch_currency_price.py  utils.py
crypto_fifo_taxes_tests/factories/: __init__.py  currency.py  test_factories.py  trade.py  transaction.py  transfer.py  user.py  utils.py  wallet.py
crypto_fifo_taxes_tests/importer/: test_binance_eth2_staking_importer.py  test_binance_importer.py  test_json_file_importer.py  test_mining.py
crypto_fifo_taxes_tests/test_importer/: test_binance_eth2_staking_importer.py  test_binance_importer.py  test_json_file_importer.py  test_mining.py  test_nicehash_csv_importer.py
crypto_fifo_taxes_tests/test_transaction/: test_cost_basis.py  test_fees.py  test_trade_gains.py  test_transaction_creator.py  test_transfer_and_swap.py  test_withdrawal_deposit.py
crypto_fifo_taxes_tests/test_utils/: currency.py
crypto_fifo_taxes_tests/test_wallet/: test_wallet_methods.py
crypto_fifo_taxes_tests/transaction/: test_cost_basis.py  test_fees.py  test_trade_gains.py  test_transaction_creator.py  test_transfer_and_swap.py
crypto_fifo_taxes_tests/wallet/: test_wallet_methods.py
project/: settings.py  urls.py
tests/: conftest.py  test_app.py  test_binance_history_iterator.py  test_fetch_currency_price.py  test_init_project.py  test_snapshot_helper.py  utils.py
tests/factories/: __init__.py  currency.py  snapshot.py  test_factories.py  transaction.py  wallet.py
tests/test_importer/: test_binance_eth2_staking_importer.py  test_binance_importer.py  test_json_file_importer.py  test_mining.py  test_nicehash_csv_importer.py
tests/test_transaction/: test_cost_basis.py  test_fees.py  test_trade_gains.py  test_transaction_creator.py  test_transfer_and_swap.py  test_withdrawal_deposit.py
tests/test_utils/: currency.py
tests/test_wallet/: test_wallet_methods.py
