[tool.poetry]
name = "crypto-fifo-taxes"
version = "0.1.0"
description = ""
authors = ["Eemeli Ranta <rantaeemeli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-environ = "^0.4.5"
dj-database-url = "^0.5.0"
django-enumfields = "^2.1.1"
Pillow = "^8.2.0"
psycopg2 = "^2.9.1"
requests = "^2.26.0"
python-binance = "^1.0.12"
xhtml2pdf = "^0.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
autoflake = "^2.0.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
norecursedirs = "node_modules"
addopts = "--nomigrations"

[tool.black]
exclude = "(migrations|node_modules)"
line_length = 120

[tool.isort]
profile = "black"
line_length=120
atomic = true
skip_glob = ["*/migrations/*", "*/node_modules/*"]
