[tool.poetry]
name = "crypto-fifo-taxes"
version = "0.1.0"
description = ""
authors = ["Eemeli Ranta <rantaeemeli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"
django-environ = "^0.11.2"
dj-database-url = "^2.1.0"
Pillow = "^10.2.0"
psycopg2 = "^2.9.1"
requests = "^2.31.0"
python-binance = "^1.0.19"
reportlab = "^4.1.0"
django-enumfields2 = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.2.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"
autoflake = "^2.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
norecursedirs = "node_modules"
addopts = "--nomigrations"

[tool.black]
exclude = "(migrations|node_modules)"
line_length = 120

[tool.isort]
profile = "black"
line_length=120
atomic = true
skip_glob = ["*/migrations/*", "*/node_modules/*"]
